# SINCOR2

./: .dockerignore  .env.example  .env.test  .gitattributes  .gitignore  .gitleaks.toml  .grok-revert-marker  .railwayignore  .snyk  AGENT_ECONOMICS.md  AGENT_ECONOMICS_VISUAL.md  AGENT_FAIRNESS_ANALYSIS.md  ARCHITECTURE.md  AUDIENCE_PITCH_KIT.md  BALANCER_PARTNER_PROOF_OF_WORK.txt  CAMPAIGN_LISTINGS.md  CANONICAL_ADDRESSES.md  CHANGELOG.md  CLAUDE_CODE_MISSION_SINCOR_CONSOLIDATION.md  CLAUDE_CONTEXT.md  COMMISSION_SUSTAINABILITY.md  COMPLIANCE_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  FAVICON_SETUP.md  FINAL_DELIVERABLES.md  FINAL_generate_all_9.py  FIXES_APPLIED.md  FOCUS.md  LICENSE  Makefile  PAYMENT_SYSTEM_READY.md  PAYPAL_PRODUCT_CATALOG.md  PAYPAL_SDK_DIAGNOSIS.md  PROJECT_SECRETS_SUMMARY.md  Procfile  RAILWAY_DEPLOYMENT_KEYS.md  RAILWAY_SETUP.md  README.md  (+121 more)
CLINTON-MONETIZATION-ENGINE_PRO/: .yamllint.yaml  Makefile  README.md  mkdocs.yml
adapters/: __init__.py  beeai_adapter.py  crewai_adapter.py  generic_adapter.py  langgraph_adapter.py
agents/: E-critic-46.yaml  E-hadar-44.yaml  E-nashira-45.yaml  E-strategist-45.yaml  E-toa-44.yaml  README.md  base_agent.py  crontab.example  departments.json  runner.py
assets/: README.md
auto_detailers_us/: main.py  requirements.txt
code_pkg/: AE-21.json  AE-22.json  AE-23.json  AE-24.json  AE-25.json  AE-26.json  AE-27.json  BF-06.json  BF-07.json  BF-08.json  BF-09.json  BF-10.json  CT-16.json  CT-17.json  CT-18.json  CT-19.json  CT-20.json  MP-01.json  MP-02.json  MP-03.json  MP-04.json  MP-05.json  MR-11.json  MR-12.json  MR-13.json  MR-14.json  MR-15.json  TR-01.json  __init__.py  ad_corpus.yaml  ad_frameworks.yaml  ad_personas.yaml  ad_training.yaml  admin_control.py  agent_authentication_middleware.py  agent_capability_enhancer.py  agent_observability.html  agent_steering.html  agent_telemetry_collection.py  analytics_dashboard.py  (+1181 more)
config/: agent_prospects.yaml  agent_quota.py  launch_campaign.yaml  launch_partners.yaml  launchpads.yaml  outreach_emails.yaml  railway_add_these.env  x402_pricing.yaml
constitution/: global.md
content/: README.md  calendar.json
contracts/: MEVLiquidator.sol  SINCAMMRouter.sol  SINCBondingCurve.sol  SINCToken.sol
core/: README.md  __init__.py  content_feedback_loop.py  novelty_enforcer.py  policy.py  reliability.py  router.py
dae/: README.md  __init__.py  governance.py  identity.py  incentives.py
dashboard/: package-lock.json  package.json
data/: waitlist.db
docs/: AGENT_ADDONS.md  AGENT_ANALYTICS_SETUP.md  AGENT_OPS.md  AUTONOMOUS_REVENUE_ENGINE.md  CHANGELOG.md  CLINTON_AUTO_DETAILING_SETUP.md  CODE_OF_CONDUCT.md  COMPLETE_TEST_SUMMARY.md  CONTENT_ORCHESTRATION_PLAN.md  CONTENT_STANDARDS.md  CONTRIBUTING.md  Capacity & Scheduling.md  DEPLOYMENT_GUIDE.md  FACEBOOK_SETUP_NEXT_STEPS.md  FIXES_COMPLETE.md  FIX_3_COMPLETE.md  FIX_4_COMPLETE.md  FLUID_INTEGRATION.md  Gift Cards & Bundles.md  LIQUIDITY_AGENTS.md  MARKET_MAKER.md  POLYCLAW_SELF_PERPETUATING_EARNING_MACHINE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READY_REPORT.md  PRODUCTION_TEST_REPORT.md  Policies (Cancellation, Payment, Warranty).md  Quality Standards.md  RAILWAY_DEPLOYMENT.md  README.md  SALES_OUTREACH_SWARM.md  SECURITY_INTEGRATION_REPORT.md  SINC_DEPLOY.md  SINC_INTEGRATION.md  Subscriptions & Maintenance Plans.md  TEST_DASHBOARDS.md  TEST_REPORT.md  TOKEN_ADOPTION_PLAN.md  Upsells & Add-ons.md  VERTICAL_CONTENT_CATALOGS.md  WEBSITE_PRICING_COPY.md  (+7 more)
examples/: README.md  a2a_loop_demo.py  crewai_onboard.py  external_agent_registration.sh
fix-kit/: DEPLOYMENT_GUIDE.md
grok-solutions/: e2e_test_suite_example.py  langgraph_sincor_starter.py  polyclaw_live_setup.md  telegram_openclaw_setup.md
infrastructure/: README.md  __init__.py  deployment.py  liquidity.py  observability.py
integration/: polyclaw_toa_decision_router.py
integrations/: __init__.py  accounting_integration.py  crm_integration.py  email_workflow_system.py  square_integration.py  square_workflow_optimizer.py
launch/: SADAS_Launch_Checklist.md
launch_content_engine/: __init__.py  agent_personas.json  agent_spotlight.py  content_topics.json  onchain_stats.py  review_queue.py  run_cycle.py  seo_compare_pipeline.py
lifecycles/: AGENT-TEST_budget.json  AGENT-TEST_state.json  CUST-041B922216F5F624-AG-01_state.json  CUST-041B922216F5F624-AG-02_state.json  CUST-041B922216F5F624-AG-03_state.json  CUST-041B922216F5F624-AG-04_state.json  CUST-041B922216F5F624-AG-05_state.json  CUST-041B922216F5F624-AG-06_state.json  CUST-041B922216F5F624-AG-07_state.json  CUST-041B922216F5F624-AG-08_state.json  CUST-041B922216F5F624-AG-09_state.json  CUST-041B922216F5F624-AG-10_state.json  CUST-041B922216F5F624-AG-11_state.json  CUST-041B922216F5F624-AG-12_state.json  CUST-041B922216F5F624-AG-13_state.json  CUST-041B922216F5F624-AG-14_state.json  CUST-041B922216F5F624-AG-15_state.json  CUST-041B922216F5F624-AG-16_state.json  CUST-041B922216F5F624-AG-17_state.json  CUST-041B922216F5F624-AG-18_state.json  CUST-041B922216F5F624-AG-19_state.json  CUST-041B922216F5F624-AG-20_state.json  CUST-041B922216F5F624-AG-21_state.json  CUST-041B922216F5F624-AG-22_state.json  CUST-041B922216F5F624-AG-23_state.json  CUST-041B922216F5F624-AG-24_state.json  CUST-041B922216F5F624-AG-25_state.json  CUST-041B922216F5F624-AG-26_state.json  CUST-041B922216F5F624-AG-27_state.json  CUST-041B922216F5F624-AG-28_state.json  CUST-041B922216F5F624-AG-29_state.json  CUST-041B922216F5F624-AG-30_state.json  CUST-04A903BE03DFB227-AG-01_state.json  CUST-04A903BE03DFB227-AG-02_state.json  CUST-04A903BE03DFB227-AG-03_state.json  CUST-04A903BE03DFB227-AG-04_state.json  CUST-04A903BE03DFB227-AG-05_state.json  CUST-04A903BE03DFB227-AG-06_state.json  CUST-04A903BE03DFB227-AG-07_state.json  CUST-04A903BE03DFB227-AG-08_state.json  (+47 more)
marketplace/: README.md  __init__.py  agent_cards.json  barter_engine.py  discovery.py  registry.py  reputation.py  settlement.py
memory_system/: README.md
money_assets/: HOW_TO_MAKE_MONEY_NOW.md  PRODUCT_CATALOG.json  ai_agent_bundle.md  (+3 more)
sincor2/: app.py  (+31 more)
(+1058 files in other folders)
