[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sincor2"
version = "1.0.0"
description = "SINCOR Master Platform - A comprehensive platform for intelligent commerce, monetization, and content management."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "OrderofChaos33"}
]
keywords = ["commerce", "monetization", "ai", "flask", "ecommerce"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "Flask>=3.1.3,<4.0.0",
    "Werkzeug>=3.1.0,<4.0.0",
    "Jinja2>=3.1.6,<4.0.0",
    "requests>=2.32.4",
    "httpx>=0.28.0",
    "urllib3>=2.7.0",
    "PyJWT>=2.13.0",
    "flask-jwt-extended>=4.7.0",
    "Authlib>=1.7.0",
    "pydantic[email]>=2.10.0",
    "email-validator>=2.2.0",
    "cryptography>=49.0.0",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.2.2",
    "numpy>=1.26.0",
    "flask-limiter>=4.0.0",
    "anthropic>=0.69.0",
    "gunicorn>=26.0.0",
    "psutil>=6.0.0",
    "reportlab>=4.2.0",
    "resend>=2.0.0",
    "sendgrid>=6.11.0",
    "twilio>=9.0.0",
    "stripe>=12.0.0",
    "APScheduler>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pip-audit>=2.9.0",
]
redis = [
    "redis>=5.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/OrderofChaos33/sincor2"
Repository = "https://github.com/OrderofChaos33/sincor2.git"
Documentation = "https://github.com/OrderofChaos33/sincor2"
Issues = "https://github.com/OrderofChaos33/sincor2/issues"

[project.scripts]
sincor2 = "sincor2.app:main"

[tool.setuptools]
packages = ["sincor2"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
