[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sincor2"
version = "0.1.0"
description = "SINCOR2 - Autonomous Workforce Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask>=3.0.0",
    "Flask-JWT-Extended>=4.5.0",
    "Flask-Limiter>=3.8.0",
    "Flask-Cors>=5.0.0",
    "Pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]